# my-python-scripts

./: .gitignore  pyproject.toml  test.py
.github/workflows/: poetry-test.yml  python-app.yml
my_python_scripts/: 4ksj.py  4ksj_selenium.py  __main__.py  selenium.py  util.py
