[tool.poetry]
name = "my-python-scripts"
version = "0.1.0"
description = ""
authors = ["MarvinXu <272077995@qq.com>"]
readme = "README.md"
packages = [{include = "my_python_scripts"}]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "my_python_scripts.main:main"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"